# health-tracking-app

./: .gitignore  .pre-commit-config.yaml  CUSTOM_FOOD_FEATURE.md  DEPLOYMENT.md  FEATURE_CUSTOM_NUTRITION.md  FIX_SUMMARY.md  README.md  TECH_DOCUMENT.md  UI_IMPROVEMENTS.md  start-dev.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  commitlint.yml  deploy.yml  pre-commit.yml
backend/: .coverage  health_tracking.db  migrate_custom_nutrition.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test.db  test_nutrition.db
backend/app/: database.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  exercise.py  nutrition.py  profile.py  weights.py
backend/app/models/: __init__.py  custom_food.py  exercise.py  food_entry.py  user.py  weight_entry.py
backend/app/schemas/: __init__.py  custom_food.py  exercise.py  food_entry.py  user.py  weight_entry.py
backend/app/services/: auth.py  calculations.py  nutrition.py  usda.py  user.py
backend/app/utils/: time.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_custom_foods.py  test_nutrition.py  test_profile.py  test_weekly_comparison.py  test_weights.py
backend/tests/unit/: test_database.py  test_health.py  test_usda_service.py  test_user_model.py  test_user_schema.py  test_user_service.py  test_weight_entry_model.py  test_weight_entry_schema.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/utils/: date.ts
(+28 files in other folders)
