[project]
name = "health-tracking-app"
version = "0.1.0"
description = "Health tracking application for monitoring daily calorie intake and consumption"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=80"


